force-app/main/default/objects/TypePromotion__c/TypePromotion__c.object-meta.xml
<CustomObject>
    <label>Type Promotion</label>
    <nameField>
        <label>Nom de Type Promotion</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Types Promotion</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>