force-app/main/default/objects/TypePromotion__c/fields/Debutdevalidite__c.field-meta.xml
<CustomField>
    <fullName>Debutdevalidite__c</fullName>
    <label>Début de validité</label>
    <type>Date</type>
</CustomField>