force-app/main/default/objects/TypePromotion__c/fields/Findevalidite__c.field-meta.xml
<CustomField>
    <fullName>Findevalidite__c</fullName>
    <label>Fin de validité</label>
    <type>Date</type>
</CustomField>