force-app/main/default/objects/TypePromotion__c/fields/LibelleTypePromotion__c.field-meta.xml
<CustomField>
    <fullName>LibelleTypePromotion__c</fullName>
    <label>Libellé Type Promotion</label>
    <length>50</length>
    <type>Text</type>
</CustomField>