force-app/main/default/objects/TypePromotion__c/fields/TypePromotion__c.field-meta.xml
<CustomField>
    <fullName>TypePromotion__c</fullName>
    <description>Michael affirme et assure que ce champ sera unique et utilisé comme &quot;Identificateur de champ unique&quot;</description>
    <externalId>true</externalId>
    <label>Type Promotion</label>
    <length>18</length>
    <type>Text</type>
</CustomField>