force-app/main/default/objects/TypePromotion__c/listViews/Tout.listView-meta.xml
<ListView>
    <fullName>Tout</fullName>
    <columns>NAME</columns>
    <columns>Actif__c</columns>
    <columns>Debutdevalidite__c</columns>
    <columns>Findevalidite__c</columns>
    <columns>LibelleTypePromotion__c</columns>
    <columns>TypePromotion__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>